// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esm-parameters name-and-parameters.js 1`] = `
Object {
  "components": Object {
    "3880efc294775fe5c4afbb60ef59b162": Object {
      "name": "ControlsTable",
      "package": "3880efc294775fe5c4afbb60ef59b162",
    },
  },
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {
      "ControlsTable": "3880efc294775fe5c4afbb60ef59b162",
    },
    "date": "2020-07-06T20:55:12.000Z",
    "dateModified": "2020-07-06T20:55:12.000Z",
    "package": "88c5aea0fddc19a67df23e2335e64036",
    "title": "Story",
  },
  "packages": Object {
    "3880efc294775fe5c4afbb60ef59b162": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^3.1.5",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gitlog": "^4.0.4",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "isomorphic-git": "^1.8.0",
        "js-string-escape": "^1.0.1",
        "path": "^0.12.7",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "sloc": "^0.2.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^2.6.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "@types/sloc": "^0.2.0",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "3880efc294775fe5c4afbb60ef59b162",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/parameters/name-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "3.1.5",
    },
    "88c5aea0fddc19a67df23e2335e64036": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^3.1.5",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gitlog": "^4.0.4",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "isomorphic-git": "^1.8.0",
        "js-string-escape": "^1.0.1",
        "path": "^0.12.7",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "sloc": "^0.2.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^2.6.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "@types/sloc": "^0.2.0",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "88c5aea0fddc19a67df23e2335e64036",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/parameters/name-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "3.1.5",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "component": "ControlsTable",
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 23,
          "line": 2,
        },
      },
      "name": "Custom story name",
      "smartControls": Object {
        "smart": false,
      },
      "source": "() => {}",
    },
  },
  "transformed": "export default { title: 'Story' };
export const myStory = () => {};
myStory.story = {
  name: 'Custom story name',
  component: ControlsTable,
  smartControls: {
    smart: false,
  },
};
",
}
`;

exports[`esm-parameters name-parameters-and-controls.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": "2020-07-06T20:55:12.000Z",
    "dateModified": "2020-07-06T20:55:12.000Z",
    "package": "34bc7325264153ecebfb43811bd20164",
    "title": "Story",
  },
  "packages": Object {
    "34bc7325264153ecebfb43811bd20164": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^3.1.5",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gitlog": "^4.0.4",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "isomorphic-git": "^1.8.0",
        "js-string-escape": "^1.0.1",
        "path": "^0.12.7",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "sloc": "^0.2.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^2.6.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "@types/sloc": "^0.2.0",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "34bc7325264153ecebfb43811bd20164",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/parameters/name-parameters-and-controls.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "3.1.5",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "controls": Object {
        "name": Object {
          "label": "Name",
          "order": 9999,
          "type": "ControlTypes.TEXT",
          "value": "Mark",
        },
      },
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 23,
          "line": 2,
        },
      },
      "name": "Custom story name",
      "smartControls": Object {
        "smart": false,
      },
      "source": "() => {}",
    },
  },
  "transformed": "export default { title: 'Story' };
export const myStory = () => {};
myStory.story = {
  name: 'Custom story name',
  controls: {
    name: {
      type: ControlTypes.TEXT,
      label: 'Name',
      value: 'Mark',
      order: 9999,
    },
  },
  smartControls: {
    smart: false,
  },
};
",
}
`;

exports[`esm-parameters story-property-name.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": "2020-07-06T20:55:12.000Z",
    "dateModified": "2020-07-06T20:55:12.000Z",
    "package": "514de6078cace1101b526c04fd631dce",
    "title": "Story",
  },
  "packages": Object {
    "514de6078cace1101b526c04fd631dce": Object {
      "dependencies": Object {
        "@babel/generator": "^7.12.5",
        "@babel/parser": "^7.12.5",
        "@babel/traverse": "^7.12.5",
        "@component-controls/core": "^3.1.5",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gitlog": "^4.0.4",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "isomorphic-git": "^1.8.0",
        "js-string-escape": "^1.0.1",
        "path": "^0.12.7",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "sloc": "^0.2.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.12.6",
        "@component-controls/ts-markdown-docs": "^2.6.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "@types/sloc": "^0.2.0",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "514de6078cace1101b526c04fd631dce",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/parameters/story-property-name.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "3.1.5",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 23,
          "line": 2,
        },
      },
      "name": "Custom story name",
      "source": "() => {}",
    },
  },
  "transformed": "export default { title: 'Story' };
export const myStory = () => {};
myStory.story = {
  name: 'Custom story name',
};
",
}
`;
